# verace-trust-runtime

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: ADR-TR002-Verace-as-Trust-Runtime-for-AI-Work.md  ADR-TR003-Founder-Assistant-as-First-Runtime-Canary.md  ADR-TR004-Runtime-Ledger-Minimal-Contract.md  ADR-TR005-Receipt-and-Approval-Policy.md  ADR-TR006-Runtime-Schema-and-Migration-Policy.md  ADR-TR007-Human-Facing-System-Action-Claim-Rendering.md  (+1 more)
tests/: test_capture_actions.py  test_capture_classifier.py  test_capture_inbox.py  test_capture_read_only.py  test_cli_project_memory.py  test_cli_review_session.py  test_cli_schema_status.py  test_cli_smoke.py  test_doctor_invariants.py  test_doctor_schema_state.py  test_founder_assistant_seed.py  test_ledger_init.py  test_mandate_scope.py  test_migration_runner.py  test_persona_frontdoor.py  test_persona_provider.py  test_policy_before_mutation.py  test_policy_receipts.py  test_project_brief.py  test_project_decisions.py  test_project_memory_restart.py  test_renderer_cli.py  test_renderer_failure_class_closure.py  test_renderer_read_only.py  test_response_claim_renderer.py  test_restart_recovery.py  test_review_queue.py  test_review_resolution.py  test_review_restart.py  test_schema_fail_closed.py  test_schema_metadata.py  test_session_brief.py  test_task_status_transitions.py  test_workbench_cli.py  test_workbench_context_intake.py  test_workbench_plan_page.py  test_workbench_product_loop.py  test_workbench_read_only.py  test_workbench_rendered_outputs.py  test_workbench_run_control.py  (+3 more)
(+61 files in other folders)
