[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verace-runtime"
version = "0.1.0"
description = "Minimal Verace Trust Runtime ledger seed"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
verace-runtime = "verace_runtime.cli:main"
verace-workbench = "verace_runtime.workbench.server:main"
verace-workbench-control = "verace_runtime.workbench.run_control:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
verace_runtime = ["ledger/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
